Details
Description
applications/kitchensink/Kitchensink.java failed with Kitchensink failed with exit code = 138
[glue.process.err] java.net.ConnectException: Connection refused (Connection refused)
[glue.process.err] at java.base/java.net.PlainSocketImpl.socketConnect(Native Method)
[glue.process.err] at java.base/java.net.AbstractPlainSocketImpl.doConnect(AbstractPlainSocketImpl.java:399)
[glue.process.err] at java.base/java.net.AbstractPlainSocketImpl.connectToAddress(AbstractPlainSocketImpl.java:242)
[glue.process.err] at java.base/java.net.AbstractPlainSocketImpl.connect(AbstractPlainSocketImpl.java:224)
[glue.process.err] at java.base/java.net.SocksSocketImpl.connect(SocksSocketImpl.java:403)
[glue.process.err] at java.base/java.net.Socket.connect(Socket.java:591)
[glue.process.err] at java.base/java.net.Socket.connect(Socket.java:540)
[glue.process.err] at java.base/java.net.Socket.<init>(Socket.java:436)
[glue.process.err] at java.base/java.net.Socket.<init>(Socket.java:213)
[glue.process.err] at applications.kitchensink.process.glue.Main.shutdownStressProcess(Main.java:517)
[glue.process.err] at applications.kitchensink.process.glue.Main.execute(Main.java:311)
[glue.process.err] at applications.kitchensink.process.glue.Main.mainReturnInt(Main.java:159)
[glue.process.err] at applications.kitchensink.process.glue.Main.main(Main.java:142)
[glue.process.err] ERROR: Failure in shutdown connection to the stress process. Will kill it.
[glue.process.err] [analyzer.process.err] Starting the ResultAnalyzer
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Max Transactions: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Jni.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Thread Spread: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Event Count: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: LpHello.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Min transactions: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008Serial.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: NMT.Failure: Not all values are zero
[glue.process.err] [analyzer.process.err] FAILURE: Reference.Weak diff: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Exception Event Count: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Jcmd.Failure: Not all values are zero
[glue.process.err] [analyzer.process.err] FAILURE: LockDeflation.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008ScimarkFftSmall.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: MBean.Amount: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008Derby.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Exception.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrExternal.Failure: Not all values are zero
[glue.process.err] [analyzer.process.err] FAILURE: Reference.Soft diff: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Throughput: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Java Event Count: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008CryptoRsa.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Reference.Final diff: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008Sunflow.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Failure: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008XmlTransform.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrExternal.Event Count: A value is zero
[glue.process.err] [analyzer.process.err] FAILURE: LpHello.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Exception.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Jni.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: LockDeflation.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Throughput: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILED: The kitchensink run failed.
[glue.process.err] [Thu Aug 16 22:06:46 PDT 2018] (1534482406799) Analyzer process has been shutdown
[glue.process.err] [Thu Aug 16 22:06:46 PDT 2018] (1534482406799) kitchensink: Finished
Finished run at: Thu Aug 16 22:06:46 PDT 2018
result: Failed. Execution failed: `main' threw exception: java.lang.Error: Kitchensink failed with exit code = 138
test result: Failed. Execution failed: `main' threw exception: java.lang.Error: Kitchensink failed with exit code = 138
[glue.process.err] java.net.ConnectException: Connection refused (Connection refused)
[glue.process.err] at java.base/java.net.PlainSocketImpl.socketConnect(Native Method)
[glue.process.err] at java.base/java.net.AbstractPlainSocketImpl.doConnect(AbstractPlainSocketImpl.java:399)
[glue.process.err] at java.base/java.net.AbstractPlainSocketImpl.connectToAddress(AbstractPlainSocketImpl.java:242)
[glue.process.err] at java.base/java.net.AbstractPlainSocketImpl.connect(AbstractPlainSocketImpl.java:224)
[glue.process.err] at java.base/java.net.SocksSocketImpl.connect(SocksSocketImpl.java:403)
[glue.process.err] at java.base/java.net.Socket.connect(Socket.java:591)
[glue.process.err] at java.base/java.net.Socket.connect(Socket.java:540)
[glue.process.err] at java.base/java.net.Socket.<init>(Socket.java:436)
[glue.process.err] at java.base/java.net.Socket.<init>(Socket.java:213)
[glue.process.err] at applications.kitchensink.process.glue.Main.shutdownStressProcess(Main.java:517)
[glue.process.err] at applications.kitchensink.process.glue.Main.execute(Main.java:311)
[glue.process.err] at applications.kitchensink.process.glue.Main.mainReturnInt(Main.java:159)
[glue.process.err] at applications.kitchensink.process.glue.Main.main(Main.java:142)
[glue.process.err] ERROR: Failure in shutdown connection to the stress process. Will kill it.
[glue.process.err] [analyzer.process.err] Starting the ResultAnalyzer
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Max Transactions: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Jni.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Thread Spread: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Event Count: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: LpHello.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Min transactions: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008Serial.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: NMT.Failure: Not all values are zero
[glue.process.err] [analyzer.process.err] FAILURE: Reference.Weak diff: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Exception Event Count: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Jcmd.Failure: Not all values are zero
[glue.process.err] [analyzer.process.err] FAILURE: LockDeflation.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008ScimarkFftSmall.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: MBean.Amount: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008Derby.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Exception.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrExternal.Failure: Not all values are zero
[glue.process.err] [analyzer.process.err] FAILURE: Reference.Soft diff: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Throughput: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Java Event Count: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008CryptoRsa.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Reference.Final diff: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008Sunflow.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrInternal.Failure: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SpecJvm2008XmlTransform.ops/m: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: JfrExternal.Event Count: A value is zero
[glue.process.err] [analyzer.process.err] FAILURE: LpHello.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Exception.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: Jni.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: LockDeflation.iterations: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILURE: SPECjbb2005.Throughput: No aspect with given name
[glue.process.err] [analyzer.process.err] FAILED: The kitchensink run failed.
[glue.process.err] [Thu Aug 16 22:06:46 PDT 2018] (1534482406799) Analyzer process has been shutdown
[glue.process.err] [Thu Aug 16 22:06:46 PDT 2018] (1534482406799) kitchensink: Finished
Finished run at: Thu Aug 16 22:06:46 PDT 2018
result: Failed. Execution failed: `main' threw exception: java.lang.Error: Kitchensink failed with exit code = 138
test result: Failed. Execution failed: `main' threw exception: java.lang.Error: Kitchensink failed with exit code = 138
Attachments
Issue Links
- relates to
-
JDK-8209054 ConcurrentHashTable: Do not allocate inside critical section
-
- Closed
-
-
JDK-8195100 Use a low latency hashtable for SymbolTable
-
- Resolved
-