8209622: applications/kitchensink/Kitchensink.java failed with Kitchensink failed with exit code = 138

SymbolTableLock no longer checks for safepoints

Reviewed-by: coleenp, rehn